fixed visibilty for hint speech bubble

--- a/input_page.css
+++ b/input_page.css
@@ -50,7 +50,7 @@
   margin-right: auto;
   padding: 5px;
   position: absolute;
-  bottom: 30px;
+  bottom: 36px;
   left: 0px;
   font-size: 11px;
   font-weight: normal;
@@ -65,6 +65,28 @@
   box-shadow: 0px 0px 3px #222;
   color: #444;
   padding-left: 10px;
+}
+
+.hint::before{
+  content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: 30px;
+  bottom: -15px;
+	border: 8px solid;
+	border-color: rgba(2,2,2,0.85) transparent transparent rgba(2,2,2,0.85);
+}
+
+.hint::after{
+  content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: 30px;
+  bottom: -15px;
+	border: 8px solid;
+	border-color: rgba(255,255,255,0.85) transparent transparent rgba(255,255,255,0.85);
 }
 
 .input:focus>.hint,
@@ -83,29 +105,7 @@
   font-size: 18px;
 }
 
-.hint::before{
-  content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-	left: 30px;
-  bottom: -20px;
-	border: 10px solid;
-	border-color: #222 transparent transparent #222;
 
-}
-
-.hint::after{
-  content: ' ';
-	position: absolute;
-	width: 0;
-	height: 0;
-	left: 30px;
-  bottom: -20px;
-	border: 10px solid;
-	border-color: #FFF transparent transparent #FFF;
-
-}
 
 .labelled-input
 {
